# csocket

./: .gitmodules  CMakeLists.txt  Makefile  README.md
src/: client.c  client.h  common.h  kafka.c  kafka.h  log.c  log.h  main.c  protobuf-c-rpc.h  server.c  server.h  types.h
src/cp/: calc.c  calc.h
src/i/: invoker.c  invoker.h  service.c  service.h
src/m/: data.c  data.h  marshaller.c  marshaller.h
src/np/: naming_proxy.c  naming_proxy.h  types.h
src/pb/: calc.pb-c.c  calc.pb-c.h  calc.proto
src/r/: requestor.c  requestor.h
src/rh/: client.c  client.h  server.c  server.h  types.h
src/types/: primitive.h
